--- a/estilos/styleindex.css
+++ b/estilos/styleindex.css
@@ -1,10 +1,12 @@
-/* Body del Index.php */
+/* Body del Index.php  REUTILIZABLE*/
 .container-body{
   --color: rgba(114, 114, 114, 0.3);
   background-color: #191a1a;
   background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
   linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
   background-size: 55px 55px;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 /* Inicio del Index.php */ 
@@ -83,6 +85,25 @@
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
+  .mensaje-index{
+    color: red;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    text-align: center;
+    margin: auto;
+    font-size: 15px;
+  }
   /* Index.php termina aquí */
   
- 
+ /* Main.php SECRETARIA DE OFICINA  REUTILIZABLE*/
+ .header-main{
+  background-color: teal;
+  padding: 5px;
+ }
+ .link-main{
+  color: #fff;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  padding: 10px;
+ }
