--- a/estilos/styleindex.css
+++ b/estilos/styleindex.css
@@ -594,3 +594,37 @@
   font-size: 20px;
   margin: 0;
 }
+/* FELICIDADES NEWUSER.PHP */
+.section-felicidadesnewuser{
+  background-color: #fff;
+  margin: auto;
+  border-radius: 20px;
+  margin: 50px 500px 50px 500px;
+  text-align: center;
+  padding: 25px;
+  font-size: 20px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+  "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.section-felicidadesnewuser p{
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+  "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 20px;
+}
+.section-felicidadesnewuser a{
+  color: #fff;
+  background-color: #008080;
+  border-radius: 20px;
+  text-decoration: none;
+  padding: 10px;
+  border-style: none;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+  "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  cursor: pointer;
+  transition: transform 0.2s ease, background-color 0.2s ease;
+  font-size: 15px;
+}
+.section-felicidadesnewuser a:hover{
+  transform: scale(1.1);
+  background-color: #00be3f;
+}
