--- a/estilos/styleindex.css
+++ b/estilos/styleindex.css
@@ -133,7 +133,37 @@
   margin: 5px;
   justify-content: center;
 }
+.main-content{
+  margin: auto;
+  margin-top: 10px;
+  background-color: #ebf0f3;
+  border-radius: 20px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  width: 50%;
+  padding: 10px;
+}
+.main-content h1{
+  text-align: center;
+  font-size: 25px;
+  margin: 0;
+}
+.main-content p{
+  font-size: 15px;
+  text-align: center;
+}
+.main-content h2{
+  color: #005e1f;
+  text-align: center;
+  font-size: 20px;
+  margin: 0;
+}
+.main-content ul{
+  justify-content: center;
+}
+.section-main{
 
+}
 .cajadetexto-main:hover {
   transform: scale(1.1);
 }
