--- a/estilos/styleindex.css
+++ b/estilos/styleindex.css
@@ -102,6 +102,31 @@
     margin: auto;
     font-size: 15px;
   }
+  .footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 2px 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+  .footer-content {
+    max-width: 1700px;
+    font-size: 10px;
+}
+
+  .footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+  .footer a:hover {
+    text-decoration: underline;
+}
   /* Index.php termina aquí */
   
  /* Main.php SECRETARIA DE OFICINA  REUTILIZABLE*/
@@ -116,12 +141,11 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 12px;
-  padding: 10px;
+  padding: 15px;
   text-decoration: none;
-  
 }
 .cajadetexto-main{
-  width: 200px;
+  width: 180px;
   height: 30px;
   background-color: #191a1a;
   transition: all 0.2s ease;
@@ -162,11 +186,31 @@
   justify-content: center;
 }
 .section-main{
-
+  margin: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  padding: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
 }
 .cajadetexto-main:hover {
   transform: scale(1.1);
 }
+.infousuario-main{
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  background-color: #eee;
+  border-radius: 20px;
+  font-size: 13px;
+  padding: 0px 15px 0px 15px;
+  justify-content: flex-end;
+  align-items: center;
+  white-space: nowrap;
+}
+
 /* System help.php Comienza aquí */
 .titulo-systemhelp{
   color: #fff;
@@ -345,7 +389,7 @@
   background-color: #800000;
   border-radius: 20px;
   text-decoration: none;
-  padding: 10px;
+  padding: 5px 10px;
   border-style: none;
   margin: auto;
   margin-top: 20px;
@@ -365,7 +409,7 @@
   background-color: #008080;
   border-radius: 20px;
   text-decoration: none;
-  padding: 10px 25px;
+  padding: 5px 15px;
   border-style: none;
   margin: auto;
   margin-top: 20px;
@@ -657,4 +701,36 @@
 .section-felicidadesnewuser a:hover{
   transform: scale(1.1);
   background-color: #00be3f;
+}
+/* REPORTES.PHP */
+.table-reportes {
+  background-color: #f9f9f9;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin: 20px auto; /* Centra la tabla orizontalmente */
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+  width: 50%;
+}
+.table-reportes th, .table-reportes td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  white-space: nowrap;
+}
+
+.table-reportes th {
+  background-color: #f1f1f1;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.table-reportes tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.table-reportes tr:hover {
+  background-color: #f1f1f1;
 }
