--- a/estilos/styleindex.css
+++ b/estilos/styleindex.css
@@ -907,3 +907,10 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
   "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
+#loading{
+  text-align: center;
+}
+#content{
+  display: none;
+}
